# TE-insertion-scanner

./: .gitignore  LASTZ_genome_align.sh  README.md  env_osx64.yml  environment.yml  insert-finder.py  insert-scanner.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  ruff.yml
src/tinscan/: LASTZ_wrapper.py  __init__.py  run_align.py  run_prep.py  run_scan.py
tests/: basic_tests.py
tinscan/: LASTZ_wrapper.py  __init__.py  run_align.py  run_prep.py  run_scan.py
tinscan/src/: LASTZ_genome_align.sh
